# docker-ansible

./: Dockerfile  aws-get-access-keys.py  compose.yaml  digicert-tls-rsa-sha256-2020-ca1.cer  docker-compose.yaml  pyproject.toml  requirements.in  requirements.txt  util.py
.github/: dependabot.yaml
.github/workflows/: build-container-image.yaml  pip-compile-upgrade.yaml
ci/: gen-compose.py  gen-github-workflows.py  gen.py
